crates/analyzer/tests/snapshots/errors__struct_call_without_kw_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: missing argument label
  ┌─ compile_errors/struct_call_without_kw_args.fe:8:37
  │
8 │         let my_house: House = House(true, price: 1000000)
  │                                     ^ add `vacant:` here
  │
  = Note: this label is optional if the argument is a variable named `vacant`.


